fixed header size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -481,7 +481,7 @@ textarea {
 	  height: 125px;
   }
   .top-bar .name h1 img {
-	  max-width: 150px;
+	  max-width: 200px;
   }
 }
 
